# u7data

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: view.rs
models/: 305-black-gate.blend  305-black-gate.mtl  fortress.blend  skippy.blend  skippy.mtl
reference/: technical-reference-marcoux.txt  ultima-vii-internal-formats.txt
src/: main.rs
