[package]
name = "u7data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
gif = "0.13"
glam = { version = "0.30", features = ["serde"] }
idm = "0.4.4"
image = "0.25"
itertools = "0.14"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_with = "3"

[dev-dependencies]
three-d = "0.18"
three-d-asset = { version = "0.9.2", features = ["obj", "png"] }
